tests/baselines/reference/genericOfACloduleType2.errors.txt
genericOfACloduleType2.ts(2,1): error TS1547: The 'module' keyword is not allowed for namespace declarations. Use the 'namespace' keyword instead.
genericOfACloduleType2.ts(4,12): error TS1547: The 'module' keyword is not allowed for namespace declarations. Use the 'namespace' keyword instead.
genericOfACloduleType2.ts(13,1): error TS1547: The 'module' keyword is not allowed for namespace declarations. Use the 'namespace' keyword instead.


==== genericOfACloduleType2.ts (3 errors) ====
    class G<T>{ bar(x: T) { return x; } }
    module M {
    ~~~~~~
!!! error TS1547: The 'module' keyword is not allowed for namespace declarations. Use the 'namespace' keyword instead.
        export class C { foo() { } }
        export module C {
               ~~~~~~
!!! error TS1547: The 'module' keyword is not allowed for namespace declarations. Use the 'namespace' keyword instead.
            export class X {
            }
        }
    
        var g1 = new G<C>();
        g1.bar(null).foo(); // no error
    }
    
    module N {
    ~~~~~~
!!! error TS1547: The 'module' keyword is not allowed for namespace declarations. Use the 'namespace' keyword instead.
        var g2 = new G<M.C>()
    }